--- a/toko.html
+++ b/toko.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cici's Mart | Warung Kelontong Modern Cigombong</title>
+  <title>Cici's Mart | Warung Kelontong Cigombong</title>
 
   <!-- ===== SECURITY HARDENING EXTRA ===== -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: blob: 'unsafe-inline' 'unsafe-eval'; upgrade-insecure-requests">
@@ -201,3 +201,4 @@
 
 </body>
 </html>
+
