Add Google site verification meta tag
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="9lXuxC1OuPqPBgDnCVcoCCWiEn8VOnO6APH0LhBw75Y" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cici's Mart | Warung Kelontong Modern Cigombong</title>
 
@@ -201,3 +202,4 @@
 
 </body>
 </html>
+
