--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="google-site-verification" content="9lXuxC1OuPqPBgDnCVcoCCWiEn8VOnO6APH0LhBw75Y" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cici's Mart | Warung Kelontong Modern Cigombong</title>
+  <title>Cici's Mart | Warung Kelontong Cigombong</title>
 
   <!-- ===== SECURITY HARDENING EXTRA ===== -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: blob: 'unsafe-inline' 'unsafe-eval'; upgrade-insecure-requests">
@@ -202,4 +202,5 @@
 
 </body>
 </html>
+
 
